# omniforge

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
api/: main.py
docs/: ARCHITECTURE.md  DEPLOY.md  SHARE.md  SLO.md
docs/adr/: ADR-001-omniforge-self-contained-multimodal-multi-llm.md
docs/diagrams/: canonical-architecture.mmd
omniforge/: __init__.py  cli.py  config.py  models.py
omniforge/agents/: __init__.py  runners.py
omniforge/brain/: __init__.py  cascade.py  policy.py
omniforge/finops/: ledger.py  outcomes.py
omniforge/gateway/: policy.py
omniforge/graph/: ask.py
omniforge/ingest/: normalize.py
omniforge/mcp/: bridge.py
omniforge/observability/: spans.py
omniforge/plan/: planner.py
omniforge/rag/: memory.py
omniforge/tools/: builtin.py
tests/: test_ask_graph.py  test_brain_policy.py  test_gateway.py  test_ingest.py  test_llm_gateway.py  test_mcp_tools.py  test_outcomes.py
ui/: next.config.mjs  package-lock.json  package.json  vercel.json
ui/app/: globals.css  layout.tsx  page.tsx
