[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omniforge"
version = "0.1.0"
description = "Self-contained multimodal multi-agent multi-LLM answer platform"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "vpeetla-ai" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.28.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "openai>=1.50.0",
  "anthropic>=0.39.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]
api = [
  "gunicorn>=23.0.0",
]

[project.scripts]
omniforge-serve = "omniforge.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["omniforge*", "api*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
